# openMPLearning

./: CMakeLists.txt  histogram.c  main.c  trapezoid.c
CMakeProject1/: CMakeLists.txt  CMakeProject1.c  CMakeProject1.h
